[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/camera.gd" type="Script" id=1]
[ext_resource path="res://map/Tile1.tres" type="TileSet" id=2]
[ext_resource path="res://player/keiki.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/environment/Tiles/FlatBrick_like.png" type="Texture" id=4]
[ext_resource path="res://zone/zone1/stage10.gd" type="Script" id=5]
[ext_resource path="res://menu/items/collectable_item/item.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/enemy/haniwa/crash.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 192 )

[node name="stage10" type="Node2D"]
script = ExtResource( 5 )

[node name="MainMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -196630, 0, 3, -196629, 0, 131073, -196628, 0, 131073, -196627, 0, 131073, -196626, 0, 131073, -196625, 0, 131073, -196624, 0, 131073, -196623, 0, 131073, -196622, 0, 131073, -196621, 0, 131073, -196620, 0, 131073, -196619, 0, 131073, -196618, 0, 131073, -196617, 0, 5, -196616, 0, 3, -196615, 0, 131073, -196614, 0, 131073, -196613, 0, 131073, -196612, 0, 5, -196611, 0, 65540, -196610, 0, 65540, -196609, 0, 65540, -262144, 0, 65540, -262143, 0, 65540, -262142, 0, 65540, -262141, 0, 65540, -131094, 0, 65538, -131093, 0, 65540, -131092, 0, 65540, -131091, 0, 65540, -131090, 0, 65540, -131089, 0, 65540, -131088, 0, 65540, -131087, 0, 65540, -131086, 0, 65540, -131085, 0, 65540, -131084, 0, 65540, -131083, 0, 65540, -131082, 0, 65540, -131081, 0, 65536, -131080, 0, 65538, -131079, 0, 65540, -131078, 0, 65540, -131077, 0, 3, -131076, 0, 4, -131075, 0, 131073, -131074, 0, 131073, -131073, 0, 4, -196608, 0, 4, -196607, 0, 131073, -196606, 0, 131073, -196605, 0, 131073, -65558, 0, 65538, -65557, 0, 65540, -65556, 0, 65540, -65555, 0, 65540, -65554, 0, 65540, -65553, 0, 65540, -65552, 0, 65540, -65551, 0, 65540, -65550, 0, 65540, -65549, 0, 65540, -65548, 0, 65540, -65547, 0, 65540, -65546, 0, 65540, -65545, 0, 65536, -65544, 0, 65538, -65543, 0, 65540, -65542, 0, 65540, -65541, 0, 65540, -65540, 0, 65540, -65539, 0, 65540, -65538, 0, 65540, -65537, 0, 65540, -131072, 0, 65540, -131071, 0, 65540, -131070, 0, 65540, -131069, 0, 65540, -22, 0, 65538, -21, 0, 65540, -20, 0, 65540, -19, 0, 65540, -18, 0, 65540, -17, 0, 65540, -16, 0, 65540, -15, 0, 65540, -14, 0, 65540, -13, 0, 65540, -12, 0, 65540, -11, 0, 65540, -10, 0, 65540, -9, 0, 131072, -8, 0, 131074, -7, 0, 65540, -6, 0, 65540, -5, 0, 65540, -4, 0, 65540, -3, 0, 65540, -2, 0, 65540, -1, 0, 65540, -65536, 0, 65540, -65535, 0, 65540, -65534, 0, 65540, -65533, 0, 65540, 65514, 0, 65538, 65515, 0, 65540, 65516, 0, 65540, 65517, 0, 65540, 65518, 0, 65540, 65519, 0, 65540, 65520, 0, 65540, 65521, 0, 65540, 65522, 0, 65540, 65523, 0, 65540, 65524, 0, 65540, 65525, 0, 65540, 65526, 0, 65540, 65527, 0, 65540, 65528, 0, 65540, 65529, 0, 65540, 65530, 0, 65540, 65531, 0, 0, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 65540, 131050, 0, 65538, 131051, 0, 65540, 131052, 0, 65540, 131053, 0, 65540, 131054, 0, 65540, 131055, 0, 65540, 131056, 0, 65540, 131057, 0, 0, 131058, 0, 1, 131059, 0, 1, 131060, 0, 2, 131061, 0, 65540, 131062, 0, 65540, 131063, 0, 65540, 131064, 0, 65540, 131065, 0, 65540, 131066, 0, 65540, 131067, 0, 65536, 131068, 0, 65540, 131069, 0, 65540, 131070, 0, 65540, 131071, 0, 65540, 65536, 0, 65540, 65537, 0, 65540, 65538, 0, 65540, 65539, 0, 65540, 196586, 0, 65538, 196587, 0, 65540, 196588, 0, 65540, 196589, 0, 65540, 196590, 0, 65540, 196591, 0, 65540, 196592, 0, 65540, 196593, 0, 65536, 196594, 0, 65540, 196595, 0, 65540, 196596, 0, 65538, 196597, 0, 65540, 196598, 0, 65540, 196599, 0, 65540, 196600, 0, 65540, 196601, 0, 65540, 196602, 0, 65540, 196603, 0, 65536, 196604, 0, 65540, 196605, 0, 65540, 196606, 0, 65540, 196607, 0, 65540, 131072, 0, 65540, 131073, 0, 65540, 131074, 0, 65540, 131075, 0, 65540, 262122, 0, 131075, 262123, 0, 1, 262124, 0, 1, 262125, 0, 1, 262126, 0, 65540, 262127, 0, 65540, 262128, 0, 65540, 262129, 0, 131072, 262130, 0, 131073, 262131, 0, 131074, 262132, 0, 131075, 262133, 0, 1, 262134, 0, 1, 262135, 0, 1, 262136, 0, 1, 262137, 0, 1, 262138, 0, 1, 262139, 0, 1, 262140, 0, 1, 262141, 0, 131077, 262142, 0, 65540, 262143, 0, 65540, 196608, 0, 65540, 196609, 0, 65540, 196610, 0, 65540, 196611, 0, 65540, 327658, 0, 65540, 327659, 0, 65540, 327660, 0, 65540, 327661, 0, 65538, 327662, 0, 65540, 327663, 0, 65540, 327664, 0, 65540, 327665, 0, 65540, 327666, 0, 65540, 327667, 0, 65540, 327668, 0, 65540, 327669, 0, 65540, 327670, 0, 65540, 327671, 0, 65540, 327672, 0, 65540, 327673, 0, 65540, 327674, 0, 65540, 327675, 0, 65540, 327676, 0, 0, 327677, 0, 65540, 327678, 0, 65540, 327679, 0, 65540, 262144, 0, 65540, 262145, 0, 65540, 262146, 0, 65540, 262147, 0, 65540, 393194, 0, 65540, 393195, 0, 65540, 393196, 0, 65540, 393197, 0, 65538, 393198, 0, 65540, 393199, 0, 65540, 393200, 0, 65540, 393201, 0, 65540, 393202, 0, 65540, 393203, 0, 65540, 393204, 0, 65540, 393205, 0, 65540, 393206, 0, 65540, 393207, 0, 65540, 393208, 0, 65540, 393209, 0, 65540, 393210, 0, 65540, 393211, 0, 65540, 393212, 0, 65536, 393213, 0, 65540, 393214, 0, 65540, 393215, 0, 65540, 327680, 0, 65540, 327681, 0, 65540, 327682, 0, 65540, 327683, 0, 65540, 458730, 0, 65540, 458731, 0, 65540, 458732, 0, 65540, 458733, 0, 65538, 458734, 0, 65540, 458735, 0, 65540, 458736, 0, 65540, 458737, 0, 65540, 458738, 0, 65540, 458739, 0, 65540, 458740, 0, 65540, 458741, 0, 65540, 458742, 0, 65540, 458743, 0, 65540, 458744, 0, 65540, 458745, 0, 65540, 458746, 0, 65540, 458747, 0, 65540, 458748, 0, 65536, 458749, 0, 65540, 458750, 0, 65540, 458751, 0, 65540, 393216, 0, 65540, 393217, 0, 65540, 393218, 0, 65540, 393219, 0, 65540, 524266, 0, 65540, 524267, 0, 65540, 524268, 0, 65540, 524269, 0, 131075, 524270, 0, 1, 524271, 0, 1, 524272, 0, 1, 524273, 0, 1, 524274, 0, 1, 524275, 0, 1, 524276, 0, 1, 524277, 0, 65540, 524278, 0, 65540, 524279, 0, 65540, 524280, 0, 65540, 524281, 0, 65540, 524282, 0, 1, 524283, 0, 1, 524284, 0, 131077, 524285, 0, 65540, 524286, 0, 65540, 524287, 0, 65540, 458752, 0, 65540, 458753, 0, 65540, 458754, 0, 65540, 458755, 0, 65540, 589802, 0, 65540, 589803, 0, 65540, 589804, 0, 65540, 589805, 0, 65540, 589806, 0, 65540, 589807, 0, 65540, 589808, 0, 65540, 589809, 0, 65540, 589810, 0, 65540, 589811, 0, 65540, 589812, 0, 65540, 589813, 0, 65540, 589814, 0, 65540, 589815, 0, 65540, 589816, 0, 65540, 589817, 0, 65540, 589818, 0, 65540, 589819, 0, 65540, 589820, 0, 65540, 589821, 0, 65540, 589822, 0, 65540, 589823, 0, 65540, 524288, 0, 65540, 524289, 0, 65540, 524290, 0, 65540, 524291, 0, 65540, 655338, 0, 65540, 655339, 0, 65540, 655340, 0, 65540, 655341, 0, 65540, 655342, 0, 65540, 655343, 0, 65540, 655344, 0, 65540, 655345, 0, 65540, 655346, 0, 65540, 655347, 0, 65540, 655348, 0, 65540, 655349, 0, 65540, 655350, 0, 65540, 655351, 0, 65540, 655352, 0, 65540, 655353, 0, 65540, 655354, 0, 65540, 655355, 0, 65540, 655356, 0, 65540, 655357, 0, 65540, 655358, 0, 65540, 655359, 0, 65540, 589824, 0, 65540, 589825, 0, 65540, 589826, 0, 65540, 589827, 0, 65540, 720874, 0, 65540, 720875, 0, 65540, 720876, 0, 65540, 720877, 0, 65540, 720878, 0, 65540, 720879, 0, 65540, 720880, 0, 65540, 720881, 0, 65540, 720882, 0, 65540, 720883, 0, 65540, 720884, 0, 65540, 720885, 0, 65540, 720886, 0, 65540, 720887, 0, 65540, 720888, 0, 65540, 720889, 0, 65540, 720890, 0, 65540, 720891, 0, 65540, 720892, 0, 65540, 720893, 0, 65540, 720894, 0, 65540, 720895, 0, 65540, 655360, 0, 65540, 655361, 0, 65540, 655362, 0, 65540, 655363, 0, 65540, 786410, 0, 65540, 786411, 0, 65540, 786412, 0, 65540, 786413, 0, 65540, 786414, 0, 65540, 786415, 0, 65540, 786416, 0, 65540, 786417, 0, 65540, 786418, 0, 65540, 786419, 0, 65540, 786420, 0, 65540, 786421, 0, 65540, 786422, 0, 65540, 786423, 0, 65540, 786424, 0, 65540, 786425, 0, 65540, 786426, 0, 65540, 786427, 0, 65540, 786428, 0, 65540, 786429, 0, 65540, 786430, 0, 65540, 786431, 0, 65540, 720896, 0, 65540, 720897, 0, 65540, 720898, 0, 65540, 720899, 0, 65540, 851946, 0, 65540, 851947, 0, 65540, 851948, 0, 65540, 851949, 0, 65540, 851950, 0, 65540, 851951, 0, 65540, 851952, 0, 65540, 851953, 0, 65540, 851954, 0, 65540, 851955, 0, 65540, 851956, 0, 65540, 851957, 0, 65540, 851958, 0, 65540, 851959, 0, 65540, 851960, 0, 65540, 851961, 0, 65540, 851962, 0, 65540, 851963, 0, 65540, 851964, 0, 65540, 851965, 0, 65540, 851966, 0, 65540, 851967, 0, 65540, 786432, 0, 65540, 786433, 0, 65540, 786434, 0, 65540, 786435, 0, 65540 )

[node name="FrontMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="trap_door" type="StaticBody2D" parent="."]
position = Vector2( -272, 240 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="trap_door"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="Sprite2" type="Sprite" parent="trap_door"]
position = Vector2( 64, 0 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="Sprite3" type="Sprite" parent="trap_door"]
position = Vector2( -64, 0 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="Sprite4" type="Sprite" parent="trap_door"]
position = Vector2( 32, 0 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="Sprite5" type="Sprite" parent="trap_door"]
position = Vector2( -32, 0 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="floor" type="CollisionShape2D" parent="trap_door"]
shape = SubResource( 1 )

[node name="item" parent="." instance=ExtResource( 6 )]
position = Vector2( -264, 192 )
item_no = 1

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( -120, -32 )

[node name="MainCamera" type="Camera2D" parent="player"]
current = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 1 )

[node name="camera_limit_L" type="Position2D" parent="."]
position = Vector2( -704, -128 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="camera_limit_R" type="Position2D" parent="."]
position = Vector2( 64, 320 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="initial_position" type="Position2D" parent="."]
position = Vector2( -56, -32 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="enemy" type="Node2D" parent="."]

[node name="begin" type="Area2D" parent="."]
position = Vector2( 24, -32 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="begin"]
shape = SubResource( 2 )

[node name="end" type="Area2D" parent="."]
position = Vector2( -272, 328 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider_end" type="CollisionShape2D" parent="end"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="break" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="item" to="." method="_on_item_body_entered"]
[connection signal="body_entered" from="begin" to="." method="_on_begin_body_entered"]
[connection signal="body_entered" from="end" to="." method="_on_end_body_entered"]
